frontend/test/should_fail/ret_022.grg
rule r : (Edge)
{
    x:Node;
    y:Node;

    x -e:Edge-> y;

    modify {
        delete(e);
        return(e);
    }
}
